// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link prominence render prominence default 1`] = `
<DocumentFragment>
  .css-1n9ug9x-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #1a4dbf;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-1n9ug9x-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-1n9ug9x-StyledLink>* {
  pointer-events: none;
}

.css-1n9ug9x-StyledLink:hover,
.css-1n9ug9x-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #1a4dbf;
  text-decoration-color: #1a4dbf;
}

.css-1n9ug9x-StyledLink:hover .e4bq1r52,
.css-1n9ug9x-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-1n9ug9x-StyledLink:hover::after,
.css-1n9ug9x-StyledLink:focus::after {
  background-color: #1a4dbf;
}

.css-1n9ug9x-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="css-1n9ug9x-StyledLink e4bq1r50"
    href="/"
    prominence="default"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link prominence render prominence strong 1`] = `
<DocumentFragment>
  .css-1r7br7k-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #ffffff;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-1r7br7k-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-1r7br7k-StyledLink>* {
  pointer-events: none;
}

.css-1r7br7k-StyledLink:hover,
.css-1r7br7k-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #ffffff;
  text-decoration-color: #ffffff;
}

.css-1r7br7k-StyledLink:hover .e4bq1r52,
.css-1r7br7k-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-1r7br7k-StyledLink:hover::after,
.css-1r7br7k-StyledLink:focus::after {
  background-color: #1a4dbf;
}

.css-1r7br7k-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="css-1r7br7k-StyledLink e4bq1r50"
    href="/"
    prominence="strong"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link prominence render prominence weak 1`] = `
<DocumentFragment>
  .css-tj7ht2-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #3f6ed8;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-tj7ht2-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-tj7ht2-StyledLink>* {
  pointer-events: none;
}

.css-tj7ht2-StyledLink:hover,
.css-tj7ht2-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #3f6ed8;
  text-decoration-color: #3f6ed8;
}

.css-tj7ht2-StyledLink:hover .e4bq1r52,
.css-tj7ht2-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-tj7ht2-StyledLink:hover::after,
.css-tj7ht2-StyledLink:focus::after {
  background-color: #1a4dbf;
}

.css-tj7ht2-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="css-tj7ht2-StyledLink e4bq1r50"
    href="/"
    prominence="weak"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link render correctly with bad variant 1`] = `
<DocumentFragment>
  .css-9tctgr-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #4a4f62;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-9tctgr-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-9tctgr-StyledLink>* {
  pointer-events: none;
}

.css-9tctgr-StyledLink:hover,
.css-9tctgr-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #4a4f62;
  text-decoration-color: #4a4f62;
}

.css-9tctgr-StyledLink:hover .e4bq1r52,
.css-9tctgr-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-9tctgr-StyledLink:hover::after,
.css-9tctgr-StyledLink:focus::after {
  background-color: #4a4f62;
}

.css-9tctgr-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="css-9tctgr-StyledLink e4bq1r50"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link render correctly with href props 1`] = `
<DocumentFragment>
  .css-5e45t9-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-5e45t9-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-5e45t9-StyledLink>* {
  pointer-events: none;
}

.css-5e45t9-StyledLink:hover,
.css-5e45t9-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #390171;
  text-decoration-color: #390171;
}

.css-5e45t9-StyledLink:hover .e4bq1r52,
.css-5e45t9-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-5e45t9-StyledLink:hover::after,
.css-5e45t9-StyledLink:focus::after {
  background-color: #390171;
}

.css-5e45t9-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="css-5e45t9-StyledLink e4bq1r50"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link render correctly with href props 2`] = `
<DocumentFragment>
  .css-1cknbzx-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-1cknbzx-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-1cknbzx-StyledLink>* {
  pointer-events: none;
}

.css-1cknbzx-StyledLink:hover,
.css-1cknbzx-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #390171;
  text-decoration-color: #390171;
}

.css-1cknbzx-StyledLink:hover .e4bq1r52,
.css-1cknbzx-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(4px, 0);
  -moz-transform: translate(4px, 0);
  -ms-transform: translate(4px, 0);
  transform: translate(4px, 0);
}

.css-1cknbzx-StyledLink:hover::after,
.css-1cknbzx-StyledLink:focus::after {
  background-color: #390171;
}

.css-1cknbzx-StyledLink:active {
  text-decoration-thickness: 2px;
}

.css-1sfy84i-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<a
    class="css-1cknbzx-StyledLink e4bq1r50"
    href="/"
  >
    <svg
      class="e4bq1r52 css-1sfy84i-StyledIcon-sizeStyles-StyledIcon etwatq50"
      viewBox="0 0 16 16"
    >
      <path
        d="M5.3 8.7a1 1 0 0 1 0-1.4l4-4a1 1 0 1 1 1.4 1.4L7.42 8l3.3 3.3a1 1 0 0 1-1.42 1.4l-4-4Z"
      />
    </svg>
    Hello
  </a>
  .css-5e45t9-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-5e45t9-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-5e45t9-StyledLink>* {
  pointer-events: none;
}

.css-5e45t9-StyledLink:hover,
.css-5e45t9-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #390171;
  text-decoration-color: #390171;
}

.css-5e45t9-StyledLink:hover .e4bq1r52,
.css-5e45t9-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-5e45t9-StyledLink:hover::after,
.css-5e45t9-StyledLink:focus::after {
  background-color: #390171;
}

.css-5e45t9-StyledLink:active {
  text-decoration-thickness: 2px;
}

.css-1sfy84i-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<a
    class="css-5e45t9-StyledLink e4bq1r50"
    href="/"
  >
    Hello
    <svg
      class="e4bq1r52 css-1sfy84i-StyledIcon-sizeStyles-StyledIcon etwatq50"
      viewBox="0 0 16 16"
    >
      <path
        d="M10.7071 7.29289C11.0976 7.68342 11.0976 8.31658 10.7071 8.70711L6.70711 12.7071C6.31658 13.0976 5.68342 13.0976 5.29289 12.7071C4.90237 12.3166 4.90237 11.6834 5.29289 11.2929L8.58579 8L5.29289 4.70711C4.90237 4.31658 4.90237 3.68342 5.29289 3.29289C5.68342 2.90237 6.31658 2.90237 6.70711 3.29289L10.7071 7.29289Z"
      />
    </svg>
  </a>
  .css-5e45t9-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-5e45t9-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-5e45t9-StyledLink>* {
  pointer-events: none;
}

.css-5e45t9-StyledLink:hover,
.css-5e45t9-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #390171;
  text-decoration-color: #390171;
}

.css-5e45t9-StyledLink:hover .e4bq1r52,
.css-5e45t9-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-5e45t9-StyledLink:hover::after,
.css-5e45t9-StyledLink:focus::after {
  background-color: #390171;
}

.css-5e45t9-StyledLink:active {
  text-decoration-thickness: 2px;
}

.css-1tang38-StyledExternalIconContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-bottom: 4px;
}

.css-1wiavj7-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 14px;
  width: 14px;
  min-width: 14px;
  min-height: 14px;
}

<a
    class="css-5e45t9-StyledLink e4bq1r50"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
  >
    Hello
    <span
      class="css-1tang38-StyledExternalIconContainer e4bq1r51"
    >
      <svg
        class="e4bq1r52 css-1wiavj7-StyledIcon-sizeStyles-StyledIcon etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
        />
      </svg>
    </span>
  </a>
  .css-1cknbzx-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-1cknbzx-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-1cknbzx-StyledLink>* {
  pointer-events: none;
}

.css-1cknbzx-StyledLink:hover,
.css-1cknbzx-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #390171;
  text-decoration-color: #390171;
}

.css-1cknbzx-StyledLink:hover .e4bq1r52,
.css-1cknbzx-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(4px, 0);
  -moz-transform: translate(4px, 0);
  -ms-transform: translate(4px, 0);
  transform: translate(4px, 0);
}

.css-1cknbzx-StyledLink:hover::after,
.css-1cknbzx-StyledLink:focus::after {
  background-color: #390171;
}

.css-1cknbzx-StyledLink:active {
  text-decoration-thickness: 2px;
}

.css-1tang38-StyledExternalIconContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-bottom: 4px;
}

.css-1wiavj7-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 14px;
  width: 14px;
  min-width: 14px;
  min-height: 14px;
}

<a
    class="css-1cknbzx-StyledLink e4bq1r50"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
  >
    Hello
    <span
      class="css-1tang38-StyledExternalIconContainer e4bq1r51"
    >
      <svg
        class="e4bq1r52 css-1wiavj7-StyledIcon-sizeStyles-StyledIcon etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
        />
      </svg>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link render correctly with no variant 1`] = `
<DocumentFragment>
  .css-1n9ug9x-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #1a4dbf;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-1n9ug9x-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-1n9ug9x-StyledLink>* {
  pointer-events: none;
}

.css-1n9ug9x-StyledLink:hover,
.css-1n9ug9x-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #1a4dbf;
  text-decoration-color: #1a4dbf;
}

.css-1n9ug9x-StyledLink:hover .e4bq1r52,
.css-1n9ug9x-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-1n9ug9x-StyledLink:hover::after,
.css-1n9ug9x-StyledLink:focus::after {
  background-color: #1a4dbf;
}

.css-1n9ug9x-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="css-1n9ug9x-StyledLink e4bq1r50"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link render correctly with oneLine 1`] = `
<DocumentFragment>
  .css-1kkhend-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #1a4dbf;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  display: block;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-1kkhend-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-1kkhend-StyledLink>* {
  pointer-events: none;
}

.css-1kkhend-StyledLink:hover,
.css-1kkhend-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #1a4dbf;
  text-decoration-color: #1a4dbf;
}

.css-1kkhend-StyledLink:hover .e4bq1r52,
.css-1kkhend-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-1kkhend-StyledLink:hover::after,
.css-1kkhend-StyledLink:focus::after {
  background-color: #1a4dbf;
}

.css-1kkhend-StyledLink:active {
  text-decoration-thickness: 2px;
}

<div
    style="margin-bottom: 16px; margin-top: 8px; width: 200px;"
  >
    <a
      class="css-1kkhend-StyledLink e4bq1r50"
      href="/"
    >
      Hello this is a very long text that should be truncated
    </a>
  </div>
</DocumentFragment>
`;

exports[`Link render correctly with sizes 1`] = `
<DocumentFragment>
  .css-1n9ug9x-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #1a4dbf;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-1n9ug9x-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-1n9ug9x-StyledLink>* {
  pointer-events: none;
}

.css-1n9ug9x-StyledLink:hover,
.css-1n9ug9x-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #1a4dbf;
  text-decoration-color: #1a4dbf;
}

.css-1n9ug9x-StyledLink:hover .e4bq1r52,
.css-1n9ug9x-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-1n9ug9x-StyledLink:hover::after,
.css-1n9ug9x-StyledLink:focus::after {
  background-color: #1a4dbf;
}

.css-1n9ug9x-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="css-1n9ug9x-StyledLink e4bq1r50"
    href="/"
  >
    Hello
  </a>
  ,
  .css-1dgibpn-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #1a4dbf;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-1dgibpn-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-1dgibpn-StyledLink>* {
  pointer-events: none;
}

.css-1dgibpn-StyledLink:hover,
.css-1dgibpn-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #1a4dbf;
  text-decoration-color: #1a4dbf;
}

.css-1dgibpn-StyledLink:hover .e4bq1r52,
.css-1dgibpn-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-1dgibpn-StyledLink:hover::after,
.css-1dgibpn-StyledLink:focus::after {
  background-color: #1a4dbf;
}

.css-1dgibpn-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="css-1dgibpn-StyledLink e4bq1r50"
    href="/"
  >
    Hello
  </a>
  ,
</DocumentFragment>
`;

exports[`Link render correctly with target blank 1`] = `
<DocumentFragment>
  .css-5e45t9-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-5e45t9-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-5e45t9-StyledLink>* {
  pointer-events: none;
}

.css-5e45t9-StyledLink:hover,
.css-5e45t9-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #390171;
  text-decoration-color: #390171;
}

.css-5e45t9-StyledLink:hover .e4bq1r52,
.css-5e45t9-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-5e45t9-StyledLink:hover::after,
.css-5e45t9-StyledLink:focus::after {
  background-color: #390171;
}

.css-5e45t9-StyledLink:active {
  text-decoration-thickness: 2px;
}

.css-1tang38-StyledExternalIconContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-bottom: 4px;
}

.css-1wiavj7-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 14px;
  width: 14px;
  min-width: 14px;
  min-height: 14px;
}

<a
    class="css-5e45t9-StyledLink e4bq1r50"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
  >
    Hello
    <span
      class="css-1tang38-StyledExternalIconContainer e4bq1r51"
    >
      <svg
        class="e4bq1r52 css-1wiavj7-StyledIcon-sizeStyles-StyledIcon etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
        />
      </svg>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link variant render danger 1`] = `
<DocumentFragment>
  .css-lk4zgv-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #a6102d;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-lk4zgv-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-lk4zgv-StyledLink>* {
  pointer-events: none;
}

.css-lk4zgv-StyledLink:hover,
.css-lk4zgv-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #a6102d;
  text-decoration-color: #a6102d;
}

.css-lk4zgv-StyledLink:hover .e4bq1r52,
.css-lk4zgv-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-lk4zgv-StyledLink:hover::after,
.css-lk4zgv-StyledLink:focus::after {
  background-color: #a6102d;
}

.css-lk4zgv-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="css-lk4zgv-StyledLink e4bq1r50"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link variant render info 1`] = `
<DocumentFragment>
  .css-1n9ug9x-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #1a4dbf;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-1n9ug9x-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-1n9ug9x-StyledLink>* {
  pointer-events: none;
}

.css-1n9ug9x-StyledLink:hover,
.css-1n9ug9x-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #1a4dbf;
  text-decoration-color: #1a4dbf;
}

.css-1n9ug9x-StyledLink:hover .e4bq1r52,
.css-1n9ug9x-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-1n9ug9x-StyledLink:hover::after,
.css-1n9ug9x-StyledLink:focus::after {
  background-color: #1a4dbf;
}

.css-1n9ug9x-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="css-1n9ug9x-StyledLink e4bq1r50"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link variant render neutral 1`] = `
<DocumentFragment>
  .css-9tctgr-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #4a4f62;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-9tctgr-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-9tctgr-StyledLink>* {
  pointer-events: none;
}

.css-9tctgr-StyledLink:hover,
.css-9tctgr-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #4a4f62;
  text-decoration-color: #4a4f62;
}

.css-9tctgr-StyledLink:hover .e4bq1r52,
.css-9tctgr-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-9tctgr-StyledLink:hover::after,
.css-9tctgr-StyledLink:focus::after {
  background-color: #4a4f62;
}

.css-9tctgr-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="css-9tctgr-StyledLink e4bq1r50"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link variant render primary 1`] = `
<DocumentFragment>
  .css-5e45t9-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-5e45t9-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-5e45t9-StyledLink>* {
  pointer-events: none;
}

.css-5e45t9-StyledLink:hover,
.css-5e45t9-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #390171;
  text-decoration-color: #390171;
}

.css-5e45t9-StyledLink:hover .e4bq1r52,
.css-5e45t9-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-5e45t9-StyledLink:hover::after,
.css-5e45t9-StyledLink:focus::after {
  background-color: #390171;
}

.css-5e45t9-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="css-5e45t9-StyledLink e4bq1r50"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link variant render success 1`] = `
<DocumentFragment>
  .css-1c2iwyj-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #149a7b;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-1c2iwyj-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-1c2iwyj-StyledLink>* {
  pointer-events: none;
}

.css-1c2iwyj-StyledLink:hover,
.css-1c2iwyj-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #149a7b;
  text-decoration-color: #149a7b;
}

.css-1c2iwyj-StyledLink:hover .e4bq1r52,
.css-1c2iwyj-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-1c2iwyj-StyledLink:hover::after,
.css-1c2iwyj-StyledLink:focus::after {
  background-color: #149a7b;
}

.css-1c2iwyj-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="css-1c2iwyj-StyledLink e4bq1r50"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link variant render warning 1`] = `
<DocumentFragment>
  .css-bfyf3e-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #cc4e18;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-bfyf3e-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-bfyf3e-StyledLink>* {
  pointer-events: none;
}

.css-bfyf3e-StyledLink:hover,
.css-bfyf3e-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #cc4e18;
  text-decoration-color: #cc4e18;
}

.css-bfyf3e-StyledLink:hover .e4bq1r52,
.css-bfyf3e-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-bfyf3e-StyledLink:hover::after,
.css-bfyf3e-StyledLink:focus::after {
  background-color: #cc4e18;
}

.css-bfyf3e-StyledLink:active {
  text-decoration-thickness: 2px;
}

<a
    class="css-bfyf3e-StyledLink e4bq1r50"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;
